# toy-payments

./: Cargo.toml  README.md
inputs/: deposits.csv  dispute.csv  dispute_chargeback.csv  dispute_chargeback_wrong_client_id.csv  dispute_on_withdrawal.csv  dispute_resolve.csv  dispute_resolve_wrong_client_id.csv  dispute_wrong_client_id.csv  duplicate_transaction.csv  long.csv  resolve_no_dispute.csv
src/: main.rs
