[package]
name = "toy_payments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
rust_decimal = { version = "1.23.1", features = ["serde-str"] }
rust_decimal_macros = "1.23.1"
serde = { version = "1.0.136", features = ["derive"] }
